--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,17 +56,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <script src="/javascript/config.js"></script>
     <script>
         var $jq = jQuery.noConflict();
-        var config = {
-            apiKey: "AIzaSyBKheAnyvSFQtaMUwlaQ_7T-q5-Z9hmuQc",
-            authDomain: "bamboo-cda5f.firebaseapp.com",
-            databaseURL: "https://bamboo-cda5f.firebaseio.com",
-            projectId: "bamboo-cda5f",
-            storageBucket: "bamboo-cda5f.appspot.com",
-            messagingSenderId: "550416420066"
-        };
-        firebase.initializeApp(config);
 
         function enterRoom(){    
             var roomID = document.getElementById('roomID').value;
