--- a/public/style/host/lobby.css
+++ b/public/style/host/lobby.css
@@ -84,10 +84,16 @@ body {
     margin-right: 0.5rem;
     float: left;
     width: 10rem;
+    height: 13rem;
+}
+
+.packCard img{
+    width: 100%;
+    height: 5.625rem;
 }
 
 .packCard:hover {
-    color: black;
+    color: rebeccapurple;
 }
 
 #desc-body {
