wait for question's image URL

--- a/public/style/host/gameView.css
+++ b/public/style/host/gameView.css
@@ -15,6 +15,17 @@ body {
     text-align: center;
 }
 
+.qImage {
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.questionImage {
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 20rem;
+}
+
 .top-scoreboard {
     text-align: center;
     margin-left: auto;
