--- a/views/host/gameView.ejs
+++ b/views/host/gameView.ejs
@@ -29,10 +29,10 @@
               </div>
             </div>
             <div class="row question">
-                <h1 class="h1" style="color:#000;" id="question"></h1> 
+                <h1 class="h1" style="color:#000;" id="question"></h1>
             </div>
 
-            <div class="row question">
+            <div class="row">
                 <img class="questionImage" id="questionImage" alt=""></img> 
             </div>
 
