--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/style/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <!-- <link rel="stylesheet" href="/style/admin/style.css"> -->
+        
+        <link rel="stylesheet" type="text/css" href="/style/feedback.css">
+        <link rel="stylesheet" type="text/css" href="/style/index.css">
+
+
+
     </head>
     <body>
     
@@ -33,13 +39,20 @@
                     <button class="ButtonEnter" onclick="createLobby()">Create a lobby</button>
                 </div>
             </div>
+        
+            <!-- <body marginwidth="0" marginheight="0"> -->
+                        
+            <!-- </body> -->
         </div>
+        
+        
     </div>
-
+    
     <div class="footer">
         <a href="#">Terms & Privacy</a>
     </div>
   
+
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
 
@@ -57,6 +70,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="/javascript/config.js"></script>
+    <script src="/javascript/feedback.js"></script>
+
     <script>
         var $jq = jQuery.noConflict();
 
@@ -123,5 +138,4 @@
         }
     </script>
 
-    </body>
 </html>
