--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -234,7 +234,7 @@
                 // User is signed out.
                 alert("You have not signed-in yet :(");
                 // Redirect to authen
-                window.location.href = '/authen/<%= lobbyID %>';
+                window.location.href = '/authen';
                 // ...
             }
         });
