move feedback from admin/login to /

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -22,7 +22,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script> -->
     
-    <link rel="stylesheet" href="/style/feedback.css">
+    <!-- <link rel="stylesheet" href="/style/feedback.css"> -->
 
     
 </head>
@@ -38,24 +38,10 @@
             </form>
     </div>
     
-    
 
-    <!-- <div id="user_div" class="loggedin-div" style="display:None;">
-            <h3>Welcome User</h3>
-            <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
-            <button onclick="logout()">Logout</button>
-    </div> -->
-    <body marginwidth="0" marginheight="0">
-        <img src="https://d6tizftlrpuof.cloudfront.net/themes/production/usabilla-button-35d1ced8945d3ee21c46cef387cc3615.png" width="40" height="131" id="myBtn">
-            
-    </body>
-    <!-- <button id="myBtn" > Send Feedback</button> -->
-    <%- include ../feedback.ejs %>
-    
-    
 
 </body>
 <script src="/javascript/config.js"></script>
 <script src="/javascript/admin.js"></script>
-<script src="/javascript/feedback.js"></script>
+<!-- <script src="/javascript/feedback.js"></script> -->
 </html>
