--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,11 @@
                     <span class="centering" style="color:#ff0000" id="message"><%=message%></span>
                 </div>
                 <div class="row">
-                    <input class="roomIDInput" type="number" name="roomID" value="" placeholder="Enter Room ID" id="roomID">
+                    <input class="input-group-text roomIDInput" type="number" name="roomID" value="" placeholder="Enter Room ID" id="roomID">
                 </div>
                 <br>
                 <div class="row">
-                    <button class="ButtonEnter" onclick="enterRoom()">Enter</button>
+                    <button class="btn ButtonEnter" onclick="enterRoom()">Enter</button>
                 </div>
                 <br />
                 <div class="row">
@@ -32,7 +32,7 @@
                 </div>
                 <br />
                 <div class="row">
-                    <button class="ButtonEnter" onclick="createLobby()">Create a lobby</button>
+                    <button class="btn ButtonEnter" onclick="createLobby()">Create a lobby</button>
                 </div>
             </div>
         </div>
