--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -63,7 +63,8 @@
 <!-- <li class="form-line" data-type="control_button" id="id_2"> -->
     <div class="row">
         <div class="col-sm-12 form-group">
-            <button type="submit" onclick="sendFeedback()" class="btn btn-lg btn-default pull-right" >Send →</button>
+            <button type="submit" onclick="sendFeedback()" class="btn btn-lg btn-default pull-right" >Send <i class="fa fa-paper-plane" aria-hidden="true"></i>
+            </button>
         </div>
     </div>
   <!-- <div id="cid_2" class="form-input-wide">
