--- a/public/style/index.css
+++ b/public/style/index.css
@@ -56,6 +56,7 @@ body {
     margin: auto;
     font-size: 3rem;
     font-weight: bold;
+    text-shadow: 0px 12px 17px rgba(0,0,0,0.85);
 }
 
 .footer {
