--- a/public/style/index.css
+++ b/public/style/index.css
@@ -31,6 +31,7 @@ body {
     -moz-box-shadow: 0px 10px 16px 1px rgba(0,0,0,0.65);
     box-shadow: 0px 10px 16px 1px rgba(0,0,0,0.65);
 
+    margin-bottom: 1rem;
 }
 
 .ButtonEnter {
