fix signOut createQuestionPacks

--- a/views/host/createQuestionPacks.ejs
+++ b/views/host/createQuestionPacks.ejs
@@ -396,6 +396,14 @@
             });
         }
 
+        function signOut() {
+            firebase.auth().signOut().then(function () {
+                console.log('Signed Out');
+            }, function (error) {
+                console.error('Sign Out Error', error);
+            });
+        }
+
     </script>
 
 </body>
